...
        android:background="#FFFFBB33"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        app:srcCompat="@drawable/_6e2689bbd596e1c543411073db311b9_2621791768" />

    <EditText
        android:id="@+id/pollTitle"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/pollTitle"
        android:inputType="text" />

    <EditText
        android:id="@+id/PollOption"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/PollOption"
        android:inputType="text" />
    <EditText
        android:id="@+id/PollOption2"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
...
