...
    <!-- Floating Action Button -->

    <!-- Additional Button 1 -->

    <!-- Additional Button 2 -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
...
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="90dp"
        android:visibility="gone"
        app:srcCompat="@android:drawable/ic_menu_view" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabPastPolls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
...
            android:layout_height="wrap_content"
            android:text="       Discovered Polls"
            android:textSize="20sp" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recViewPolls"
        android:layout_width="318dp"
        android:layout_height="207dp"
        android:layout_gravity="center"
        android:background="#2D523C61"
        android:clipChildren="true"
        android:clipToPadding="true"
...
