...
            android:layout_marginTop="-100dp"
            android:layout_marginEnd="124dp"
            android:onClick="onCurrentPoll"
            android:text="View CurrentPoll"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createPollButton"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_begin="20dp" />

        <Button
            android:id="@+id/discService"
            android:layout_width="206dp"
            android:layout_height="54dp"
            android:layout_marginStart="108dp"
            android:layout_marginBottom="644dp"
            android:onClick="onDiscoverService"
            android:text="Discover Polls"
...
